--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
-    "host": "road-flag.bnr.la",
-    "port": 8200,
-    "username": "MyBot",
+    "port": 4001,
+    "slp_host": "road-flag.bnr.la",
+    "slp_port": 8200,
+    "username": "MyBotUsername",
     "password": "greatpassword"
 }
