--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,6 @@
 {
+    "ssl_key": "../cert/key.pem",
+    "ssl_cert": "../cert/cert.pem",
     "port": 4001,
     "slp_host": "road-flag.bnr.la",
     "slp_port": 8200,
