Revert "testing 502 error fix"
This reverts commit 50a2d6a6acd0369d5cb752856051c680905cde0c.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dependencies": {
         "vue": "^2.6.12",
         "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.12",
-        "ws": "^7.4.1"
+        "vue-template-compiler": "^2.6.12"
     },
     "devDependencies": {
         "@types/clone-deep": "^4.0.1",
